~~~ Version 2.0.2
* addressed 41492.  Now 'plfs:' prefix can be passed to all plfs functions.
It is used to direct MPIIO to use plfs and MPIIO in that case strips it
off.  But users might get used to using it so if they ever do use it, then
it will work.  Brett or someone commented that this might help prevent
confusion so give it a try.  I hope it doesn't add a lot of overhead.  It's
just one extra strncmp in the normal case where prefix isn't present 
* put better info (job size, BW) into the global_summary_dir droppings
* added tools/plfs_query which is just a tool for developers.
* fixed 40866.  missing plfsrc was assert(0).  Now it's a bit more elegant
* added tools/plfs_version which queries all plfs mountpoints and reports
their versions.  It also digs into a container and reports the version that
created a particular plfs file if a target is passed on the command line
* Fixed the bug where multiple slashes (e.g. /mnt///plfs) were not working
in the ADIO path.  They were fine in the FUSE path because FUSE cleans up
paths for us but in the ADIO path, they were failing because we were just
using strcmp to test the path against the possible mount points.  Now we
tokenize and compare each token one by one.  Extra dots in a path 
(e.g. /mnt/./plfs) still won't work in ADIO.
* Added README.developer
* added tools/plfs_recover which is designed for the case where a user
modified the plfsrc to change the set of backends for an existing mount point.
They shouldn't ever do this!  But if they do, what will happen is that they
will see their file on a readdir() but on a stat() they'll either get ENOENT
because there is nothing at the new canonical location, or they'll see a
shadow container which looks like a directory to them.  So this function makes
it so that a plfs file that had a different previous canonical location is now
recovered to the new canonical location.  It also works on directories.  It
also works across file systems (i.e. it doesn't use rename).
